@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
 
+	* Invoke known filters by generic nc_var_def_filter() when given ID as name in filter string
+
 	* Clarify ncremap -m map-file usage in code and -G grd_sng usage in manual
 
 2022-07-07  Charlie Zender  <zender@uci.edu>
